<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.storyOptionsScreen.StoryOptionsActivity"
    android:id="@+id/story_options_view">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/story_options_relative_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/story_options_linear_layout"
            tools:ignore="UselessParent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:labelFor="@+id/firstNameEditText"
                style="@style/custom_bold_textview"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:inputType="text"
                android:id="@+id/firstNameEditText"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nick_name"
                android:labelFor="@+id/nickNameEditText"
                style="@style/custom_bold_textview"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/nickNameEditText"
                android:layout_marginBottom="25sp"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_recipe"
                android:layout_marginBottom="10sp"
                android:labelFor="@+id/recipe_options_spinner"
                style="@style/custom_bold_textview"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_options_spinner"
                android:layout_marginBottom="20sp"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_description"
                android:layout_marginBottom="10sp"
                android:labelFor="@+id/recipe_description_textview"
                style="@style/custom_bold_textview"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_description_textview"
                android:layout_marginBottom="20sp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starting_location"
                android:layout_marginBottom="10sp"
                android:labelFor="@+id/starting_location_spinner"
                style="@style/custom_bold_textview"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/starting_location_spinner"
                android:layout_marginBottom="20sp"/>




            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_story"
                android:id="@+id/begin_story_button"
                android:layout_gravity="center_horizontal"/>



        </LinearLayout>



    </RelativeLayout>




</ScrollView>
